--- a/recursos.qmd
+++ b/recursos.qmd
@@ -11,11 +11,20 @@ format: html
 
 ## Otros documentos
 
+Boonstra, L. (2024). Prompt Engineering. TechAI / Google. Recuperado de [Enlace](https://www.gptaiflow.com/assets/files/2025-01-18-pdf-1-TechAI-Goolge-whitepaper_Prompt%20Engineering_v4-af36dcc7a49bb7269a58b1c9b89a8ae1.pdf)
+.
+
 ## Enlaces
 
-Oaktree Capital Management. (n.d.). Insights. Oaktree Capital. https://www.oaktreecapital.com/insights
+Youtube: [Enlace](www.youtube.com/playlist?list=PLlET0GsrLUL59YbxstZE71WszP3pVnZfI&si=7LQLZvKzzRVUzLqU)
 
-Robledo, P., & Suárez, F. (2025, November 3). OpenAI saldrá a la bolsa: todo lo que tienes que saber. Fintualist. https://fintualist.com/chile/educacion-financiera/openai-se-abrira-a-la-bolsa-todo-lo-que-tienes-que-saber/?utm_source=intercom&utm_medium=email&utm_campaign=fintualist151&utm_content=chile_educacion_financiera
+Github: [Enlace](https://github.com/n8n-io/n8n-docs)
+
+Learning path n8n: [Enlace](https://docs.n8n.io/learning-path/#set-up-your-n8n)
+
+Oaktree Capital Management. (n.d.). Insights. Oaktree Capital. [Enlace](https://www.oaktreecapital.com/insights)
+
+Robledo, P., & Suárez, F. (2025, November 3). OpenAI saldrá a la bolsa: todo lo que tienes que saber. Fintualist. [Enlace](https://fintualist.com/chile/educacion-financiera/openai-se-abrira-a-la-bolsa-todo-lo-que-tienes-que-saber/?utm_source=intercom&utm_medium=email&utm_campaign=fintualist151&utm_content=chile_educacion_financiera)
 
 
 
